fix checkbox alignment

--- a/app/webpacker/packs/stylesheets.scss
+++ b/app/webpacker/packs/stylesheets.scss
@@ -61,11 +61,7 @@ blockquote {
   padding-left: 15px;
   .custom-control-label {
     &::before {
-      left: 15px;
       border: 1px solid #aaa;
-    }
-    &::after {
-      left: 15px;
     }
     margin-left: 25px;
   }
